GUI now semi-functional settings semi-functional cleaned tracelistener some

--- a/WinFileSearch/App.config
+++ b/WinFileSearch/App.config
@@ -25,6 +25,9 @@
             <setting name="TraceMessageGridSplitterPosition" serializeAs="String">
                 <value>40</value>
             </setting>
+            <setting name="FileNames" serializeAs="String">
+                <value />
+            </setting>
         </WinFileSearch.Properties.Settings>
     </userSettings>
 </configuration>
